Fixed censored words being too big

--- a/app/assets/stylesheets/pages/1_user_profile.scss
+++ b/app/assets/stylesheets/pages/1_user_profile.scss
@@ -55,7 +55,7 @@
         padding: 0;
         border-color: $grey-light;
       }
-      p {
+      p, span {
         font-size: 10px;
         font-weight: normal;
       }
